--- a/pom.xml
+++ b/pom.xml
@@ -92,7 +92,11 @@
             <version>3.8</version>
         </dependency>
         <!--文件导入的依赖 end -->
-
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus-boot-starter</artifactId>
+            <version>3.1.2</version>
+        </dependency>
         <dependency>
             <groupId>com.baomidou</groupId>
             <artifactId>mybatis-plus-generator</artifactId>
