--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,8 +1,8 @@
-logging.file=/log/samy/samy.log
+logging.file=/log/project/project.log
 #修改日志级别，默认为INFO
 logging.level.root=INFO
 #logging.level.web=debug
-logging.level.com.jiubo.samy.*=error
+logging.level.com.jiubo.project.*=error
 #连接数据库配置
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/samy20200930?useSSL=false&useUnicode=true&characterEncoding=utf8&allowMultiQueries=true&useTimezone=true&serverTimezone=GMT%2B8&zeroDateTimeBehavior=convertToNull
@@ -11,9 +11,9 @@ spring.datasource.password=jiubo@200906
 #mybatis-plus配置
 mybatis-plus.configuration.mapUnderscoreToCamelCase=true
 #加载mapper文件
-mybatis-plus.mapper-locations=classpath:com/jiubo/samy/mapper/*Mapper.xml
+mybatis-plus.mapper-locations=classpath:com/jiubo/project/mapper/*Mapper.xml
 #可以使用别名的bean
-mybatis-plus.type-aliases-package=com.jiubo.samy.bean
+mybatis-plus.type-aliases-package=com.jiubo.project.bean
 # 配置sql打印日志
 #mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
 #多个SpringBoot项目部署在同一个Tomcat时会出现（UnableToRegisterMBeanException: Unable to register MBean [HikariDataSource）错误
@@ -29,4 +29,4 @@ accountLife=36000
 appId=wx037d55b8c61aeca0
 appSecret=430480d6acfba79618e22874033adc19
  #日志
-logDir=/logDirSamy
+logDir=/logDirProject
