用户相关接口

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -26,7 +26,11 @@ tokenLife=36000
 #用户信息过期时间(单位：秒)
 accountLife=36000
 #微信
-appId=wx037d55b8c61aeca0
-appSecret=430480d6acfba79618e22874033adc19
+#appId=wx9e37c021178c466f
+#appSecret=60890f02c0553d36bdfc65f1398a54bc
+appId=wxa0f7d53841f02eed
+appSecret=4b5faf1a20727d93058c7870a89a9a50
+#redirect_uri
+redirectUri=http://edu.ejiubo.net/mylogin/userinfo.php?
 #日志
 logDir=/logDirProject
