--- a/pom.xml
+++ b/pom.xml
@@ -246,6 +246,11 @@
             <artifactId>mybatis-generator-core</artifactId>
             <version>1.3.7</version>
         </dependency>
+        <dependency>
+            <groupId>com.github.liangbaika</groupId>
+            <artifactId>validate-spring-boot-starter</artifactId>
+            <version>0.9.7</version>
+        </dependency>
     </dependencies>
 
     <build>
