修改返回状态码

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,24 +1,27 @@
 logging.file=/log/project/project.log
 #修改日志级别，默认为INFO
-logging.level.root=INFO
-#logging.level.web=debug
-logging.level.com.jiubo.project.*=error
+logging.level.root=info
+logging.level.web=info
+logging.level.com.jiubo.project.*=info
 #连接数据库配置
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/samy20200930?useSSL=false&useUnicode=true&characterEncoding=utf8&allowMultiQueries=true&useTimezone=true&serverTimezone=GMT%2B8&zeroDateTimeBehavior=convertToNull
+spring.datasource.url=jdbc:mysql://172.16.6.78:3306/jbxy?useSSL=false&useUnicode=true&characterEncoding=utf8&allowMultiQueries=true&useTimezone=true&serverTimezone=GMT%2B8&zeroDateTimeBehavior=convertToNull
 spring.datasource.username=root
-spring.datasource.password=jiubo@200906
+spring.datasource.password=root
+#配置查询数据时区
+spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
+spring.jackson.time-zone=GMT+8
 #mybatis-plus配置
 mybatis-plus.configuration.mapUnderscoreToCamelCase=true
 #加载mapper文件
-mybatis-plus.mapper-locations=classpath:com/jiubo/project/mapper/*Mapper.xml
+mybatis-plus.mapper-locations=classpath:com/jiubo/project/mapper/*.xml
 #可以使用别名的bean
 mybatis-plus.type-aliases-package=com.jiubo.project.bean
 # 配置sql打印日志
 #mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
 #多个SpringBoot项目部署在同一个Tomcat时会出现（UnableToRegisterMBeanException: Unable to register MBean [HikariDataSource）错误
 #方案一：
-spring.jmx.default-domain=samy20200930
+spring.jmx.default-domain=jbxy
 #方案二：
 #spring.jmx.enabled=false
 #token过期时间(单位：秒)
@@ -26,7 +29,11 @@ tokenLife=36000
 #用户信息过期时间(单位：秒)
 accountLife=36000
 #微信
-appId=wx037d55b8c61aeca0
-appSecret=430480d6acfba79618e22874033adc19
- #日志
+appId=wx9e37c021178c466f
+appSecret=60890f02c0553d36bdfc65f1398a54bc
+#appId=wxa0f7d53841f02eed
+#appSecret=4b5faf1a20727d93058c7870a89a9a50
+#redirect_uri
+redirectUri=http://edu.ejiubo.net/training/wxCheckLogin.html?
+#日志
 logDir=/logDirProject
