--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -8,6 +8,9 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://172.16.6.78:3306/jbxy?useSSL=false&useUnicode=true&characterEncoding=utf8&allowMultiQueries=true&useTimezone=true&serverTimezone=GMT%2B8&zeroDateTimeBehavior=convertToNull
 spring.datasource.username=root
 spring.datasource.password=root
+#配置查询数据时区
+spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
+spring.jackson.time-zone=GMT+8
 #mybatis-plus配置
 mybatis-plus.configuration.mapUnderscoreToCamelCase=true
 #加载mapper文件
